--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
-    "pdfjs-dist": "^5.4.624",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.10.38",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
